pdes/jitfailure-dolfin_expression_91919aba7ac07df3f984bcd5d976df08/error.log
/tmp/tmp_zypebau/dolfin_expression_91919aba7ac07df3f984bcd5d976df08.cpp: In member function ‘virtual void dolfin::dolfin_expression_91919aba7ac07df3f984bcd5d976df08::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp_zypebau/dolfin_expression_91919aba7ac07df3f984bcd5d976df08.cpp:63:65: error: ‘x0’ was not declared in this scope
           values[0] = A / (2*pi*sigma) * exp(-1/2 * (pow(x[0] - x0[0], 2) + pow(x[1] - x0[1], 2)));
                                                                 ^~
/tmp/tmp_zypebau/dolfin_expression_91919aba7ac07df3f984bcd5d976df08.cpp:63:65: note: suggested alternative: ‘y0’
           values[0] = A / (2*pi*sigma) * exp(-1/2 * (pow(x[0] - x0[0], 2) + pow(x[1] - x0[1], 2)));
                                                                 ^~
                                                                 y0
/tmp/tmp_zypebau/dolfin_expression_91919aba7ac07df3f984bcd5d976df08.cpp: In member function ‘virtual double dolfin::dolfin_expression_91919aba7ac07df3f984bcd5d976df08::get_property(std::__cxx11::string) const’:
/tmp/tmp_zypebau/dolfin_expression_91919aba7ac07df3f984bcd5d976df08.cpp:75:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "A") return A;          if (name == "sigma") return sigma;
           ^~
/tmp/tmp_zypebau/dolfin_expression_91919aba7ac07df3f984bcd5d976df08.cpp:75:47: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "A") return A;          if (name == "sigma") return sigma;
                                               ^~
